@@ -160,7 +160,7 @@ public class GameController
 		try
 		{
 			List<String> list = Files.readAllLines(Paths.get("scores","scores"+channel.getId()+".csv"));
-			if(Integer.parseInt(list.get(0).split("#")[2]) >= 1_000_000_000)
+			if(Integer.parseInt(list.getFirst().split("#")[2]) >= 1_000_000_000)
 				gameStatus = GameStatus.SEASON_OVER;
 			else
 				channel.sendMessage("Ready to play!").queue();
@@ -551,7 +551,7 @@ public class GameController
 	{
 		//Didn't get players? How about a bot?
 		if(players.size() == 1)
-			channel.sendMessage(players.get(0).getSafeMention()+", would you like to play against a bot? (Y/N)").queue();
+			channel.sendMessage(players.getFirst().getSafeMention()+", would you like to play against a bot? (Y/N)").queue();
 		else
 			channel.sendMessage("Would you like to play against a bot? (Y/N)").queue();
 		gameStatus = GameStatus.ADD_BOT_QUESTION;
@@ -1358,9 +1358,9 @@ public class GameController
 			//Find a bomb to destroy them with
 			int bombChosen;
 			//If their own bomb is still out there, let's just use that one
-			if(!pickedSpaces[players.get(player).myBombs.get(0)])
+			if(!pickedSpaces[players.get(player).myBombs.getFirst()])
 			{
-				bombChosen = players.get(player).myBombs.get(0);
+				bombChosen = players.get(player).myBombs.getFirst();
 			}
 			//Otherwise look for someone else's bomb
 			else
@@ -1971,7 +1971,7 @@ public class GameController
 			{
 				try { Thread.sleep(1000); } catch (InterruptedException e) { Thread.currentThread().interrupt(); }
 				//If environmental credit, add to wager pool
-				if(next.bountyCredit.get(0) == -1)
+				if(next.bountyCredit.getFirst() == -1)
 				{
 					channel.sendMessage(String.format("**%s** defeated by no one in particular - **$%,d bounty** added to wager pool."
 							,next.getName(),next.bounty)).queue();
@@ -2177,7 +2177,7 @@ public class GameController
 				currentTurn = 0;
 				for(int i=0; i<3; i++)
 				{
-					channel.sendMessage("**" + players.get(0).getName().toUpperCase() + " WINS RACE TO A BILLION!**")
+					channel.sendMessage("**" + players.getFirst().getName().toUpperCase() + " WINS RACE TO A BILLION!**")
 						.queueAfter(5+(5*i),TimeUnit.SECONDS);
 				}
 				if(runDemo != 0)
@@ -2185,14 +2185,14 @@ public class GameController
 				if(rankChannel)
 					channel.sendMessage("@everyone").queueAfter(20,TimeUnit.SECONDS);
 				gameStatus = GameStatus.SEASON_OVER;
-				if(!players.get(0).isBot && rankChannel)
+				if(!players.getFirst().isBot && rankChannel)
 				{
 					timer.schedule(() -> 
 					{
-						channel.sendMessage(players.get(0).getSafeMention() + "...").complete();
+						channel.sendMessage(players.getFirst().getSafeMention() + "...").complete();
 						channel.sendMessage("It is time to enter the Super Bonus Round.").completeAfter(5,TimeUnit.SECONDS);
 						channel.sendMessage("...").completeAfter(10,TimeUnit.SECONDS);
-						TestMinigameCommand.runGame(players.get(0).user,Game.SUPERBONUSROUND,channel, false, false);
+						TestMinigameCommand.runGame(players.getFirst().user,Game.SUPERBONUSROUND,channel, false, false);
 					}, 90, TimeUnit.SECONDS);
 				}
 			}
@@ -2273,7 +2273,7 @@ public class GameController
 							Game chosenGame;
 							do
 							{
-								chosenGame = Board.generateSpaces(1,players.size(),Game.values()).get(0);
+								chosenGame = Board.generateSpaces(1,players.size(),Game.values()).getFirst();
 							}
 							while(players.get(i).enhancedGames.contains(chosenGame)); //Reroll until we find one they haven't already done
 							players.get(i).enhancedGames.add(chosenGame);
@@ -2506,8 +2506,8 @@ public class GameController
 		//Next the status line
 		//Start by getting the lengths so we can pad the status bars appropriately
 		//Add one extra to name length because we want one extra space between name and cash
-		int nameLength = players.get(0).getName()
-				.codePointCount(0,players.get(0).getName().length());
+		int nameLength = players.getFirst().getName()
+				.codePointCount(0,players.getFirst().getName().length());
 		for(int i=1; i<players.size(); i++)
 			nameLength = Math.max(nameLength,players.get(i).getName()
 					.codePointCount(0,players.get(i).getName().length()));
@@ -2516,13 +2516,13 @@ public class GameController
 		int moneyLength;
 		if(totals)
 		{
-			moneyLength = String.valueOf(Math.abs(players.get(0).money)).length();
+			moneyLength = String.valueOf(Math.abs(players.getFirst().money)).length();
 			for(int i=1; i<players.size(); i++)
 				moneyLength = Math.max(moneyLength, String.valueOf(Math.abs(players.get(i).money)).length());
 		}
 		else
 		{
-			moneyLength = String.valueOf(Math.abs(players.get(0).getRoundDelta())).length();
+			moneyLength = String.valueOf(Math.abs(players.getFirst().getRoundDelta())).length();
 			for(int i=1; i<players.size(); i++)
 			{
 				//If someone's on $1b then they get that displayed directly, otherwise get the largest round delta
@@ -2731,10 +2731,10 @@ public class GameController
 					channel.sendMessage("It's a **BOMB**.").queue();
 					awardBomb(player, BombType.NORMAL); //Never roll the bomb, so potential use in avoiding bankrupt
 				}
-				case CASH -> awardCash(player, Board.generateSpaces(1, players.size(), Cash.values()).get(0));
-				case BOOSTER -> awardBoost(player, Board.generateSpaces(1, players.size(), Boost.values()).get(0));
+				case CASH -> awardCash(player, Board.generateSpaces(1, players.size(), Cash.values()).getFirst());
+				case BOOSTER -> awardBoost(player, Board.generateSpaces(1, players.size(), Boost.values()).getFirst());
 				case GAME -> awardGame(player, players.get(player).generateEventMinigame());
-				case EVENT -> awardEvent(player, Board.generateSpaces(1, players.size(), EventType.values()).get(0));
+				case EVENT -> awardEvent(player, Board.generateSpaces(1, players.size(), EventType.values()).getFirst());
 				default -> channel.sendMessage("Nothing. Did you do something weird?").queue();
 			}
 			if(bagger.hiddenCommand == HiddenCommand.BONUS)
